# Clockwork

./: .gitignore  CMakeLists.txt  CustomComboBox.qml  CustomPopup.qml  README.md  main.cpp  main.qml  mouseeventlistener.cpp  mouseeventlistener.h  resources.qrc  translator.cpp  translator.h
languages/: en.ts  fi.ts
shaders/: wobble.frag
